[WFLY-3739] Convert the standalone container to use the launcher API.